Add file TH-luyenTapVoiCauTrucSwitchCase/signn

--- a/TH-luyenTapVoiCauTrucSwitchCase/signn.html
+++ b/TH-luyenTapVoiCauTrucSwitchCase/signn.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <script>
-        let a=parseInt(prompt('Type a number', ''));
-        switch (a) {
+        let input=parseInt(prompt('Type a number', ''));
+        switch (input) {
             case 0:
                 alert("0");
                 break;
-            case Math.abs(a):
+            case Math.abs(input):
                 alert("1");
                 break;
             default:
